fix overflow scroll

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,10 @@ input:focus {
     outline: none;
     background: none;
 }
+::-webkit-scrollbar {
+  width: 0;
+}
+
 ::-webkit-input-placeholder,
 ::placeholder {
     color: #999;
@@ -193,6 +197,7 @@ input:focus {
     position: relative;
     display: block;
     width: 100%;
+    margin-top: 20px
 }
 
 .box .search .search-box input {
